NetworkConfigView: Prevent SystemWebDialogDelegate from opening

There are a few cases where a user might open a
SystemWebDialogDelegate while NetworkConfigView is open.

NetworkConfigView uses SystemTrayClient::CreateUnownedDialogWidget
which does not interact well with SystemWebDialogDelegate
(see issue).

Since NetworkConfigView will soon be deprecated, the simplest
short term fix is to not show any SystemWebDialogDelegate
instance while NetworkConfigView is shown. This will not seem
to strange to a user since NetworkConfigView is a modal dialog.

Bug: 791955
Change-Id: Ibe37ff737df69d5d02670c435124e2837ddb0bab
Reviewed-on: https://chromium-review.googlesource.com/825626
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523955}
Former-commit-id: 4b6bbb0348e4ec1ccbef8993a5d54bdc62a6f888